Kubernetes-Manifests-file/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend
  labels:
    app: todolist
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
      component: frontend
  template:
    metadata:
      labels:
        app: todolist
        component: frontend
    spec:
      containers:
        - name: frontend
          image: houssemdhahri93/todolist-frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "32m"
              memory: "25Mi"
            limits:
              cpu: "128m"
              memory: "100Mi"
